// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component test Button title renders correctly with props 1`] = `
<div
  className="button"
>
  subscribe
</div>
`;

exports[`Button component test Button title renders correctly without props 1`] = `
<div
  className="button"
>
  Button
</div>
`;
